<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.features.home.HomeFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/avatar_iv"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="58dp"
                android:scaleType="centerCrop"
                android:src="@drawable/img_avatar"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/hello_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="58dp"
                android:text="@string/hello"
                android:textSize="16sp"
                android:textColor="@color/black"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@+id/avatar_iv"/>

            <TextView
                android:id="@+id/user_name_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/jane_doe"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@+id/hello_tv"
                app:layout_constraintStart_toEndOf="@+id/avatar_iv"/>

            <androidx.cardview.widget.CardView
                android:id="@+id/search_btn"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginEnd="30dp"
                android:layout_marginTop="58dp"
                app:cardCornerRadius="12dp"
                app:cardElevation="10dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                >

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="14dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_search" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/favorites_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="52dp"
                android:layout_marginHorizontal="30dp"
                tools:text="@string/your_favorites_title"
                android:textSize="12sp"
                android:textColor="@color/black"
                app:layout_constraintTop_toBottomOf="@+id/avatar_iv"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/no_favorites_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginHorizontal="16dp"
                android:text="@string/no_favorites_title"
                android:textSize="12sp"
                android:textColor="@color/black"
                app:layout_constraintTop_toBottomOf="@+id/favorites_title"
                app:layout_constraintStart_toStartOf="parent"
                android:visibility="gone"/>

            <androidx.core.widget.ContentLoadingProgressBar
                android:id="@+id/favorites_pb"
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginStart="16dp"
                android:layout_gravity="start"
                app:layout_constraintTop_toBottomOf="@+id/favorites_title"
                app:layout_constraintStart_toStartOf="parent"
                />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/favorites_rv"
                android:layout_width="match_parent"
                android:layout_height="313dp"
                android:orientation="horizontal"
                android:layout_marginTop="20dp"
                tools:listitem="@layout/item_favorite"
                app:layout_constraintTop_toBottomOf="@+id/favorites_title"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/staff_picks_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="@string/staff_picks_title"
                android:layout_marginStart="30dp"
                android:textSize="12sp"
                android:textColor="@color/black"
                app:layout_constraintTop_toBottomOf="@+id/favorites_rv"
                app:layout_constraintStart_toStartOf="parent"/>

            <androidx.core.widget.ContentLoadingProgressBar
                android:id="@+id/staff_picks_pb"
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="20dp"
                android:layout_gravity="center_horizontal"
                app:layout_constraintTop_toBottomOf="@+id/staff_picks_title"
                app:layout_constraintStart_toStartOf="parent"
                />

            <TextView
                android:id="@+id/no_staff_picks_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="20dp"
                android:text="@string/no_staff_picks_title"
                android:textSize="12sp"
                android:textColor="@color/black"
                app:layout_constraintTop_toBottomOf="@+id/staff_picks_title"
                app:layout_constraintStart_toStartOf="parent"
                android:visibility="gone"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/staff_picks_rv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="30dp"
                tools:listitem="@layout/item_movie"
                app:layout_constraintTop_toBottomOf="@+id/staff_picks_title"
                app:layout_constraintStart_toStartOf="parent"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>