<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.features.detail.DetailFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="30dp"
            android:paddingBottom="70dp"
            android:paddingTop="104dp"
            android:background="@color/white">

            <androidx.cardview.widget.CardView
                android:id="@+id/card"
                android:layout_width="203dp"
                android:layout_height="296dp"
                app:cardCornerRadius="14dp"
                app:cardElevation="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <ImageView
                    android:id="@+id/poster_iv"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/white"
                    android:scaleType="centerCrop"
                    tools:src="@tools:sample/backgrounds/scenic"/>
            </androidx.cardview.widget.CardView>

            <RatingBar
                android:id="@+id/rating_bar"
                android:layout_width="wrap_content"
                android:layout_height="14dp"
                style="@style/MovieRatingBarLarge"
                tools:rating="3"
                android:isIndicator="true"
                android:layout_marginTop="18dp"
                app:layout_constraintTop_toBottomOf="@+id/card"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/date_time_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="@color/black_60"
                android:layout_marginTop="12dp"
                app:layout_constraintTop_toBottomOf="@+id/rating_bar"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                tools:text="29.07.2010  ·  2h 28m" />

            <TextView
                android:id="@+id/title_year_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                tools:text="Inception"
                android:textSize="24sp"
                android:textColor="@color/black"
                android:textAlignment="center"
                app:layout_constraintTop_toBottomOf="@+id/date_time_tv"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_chainStyle="packed"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/genres_rv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="12dp"
                app:layout_constraintTop_toBottomOf="@+id/title_year_tv"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/overview_title_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_marginTop="45dp"
                app:layout_constraintTop_toBottomOf="@+id/genres_rv"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/overview_title" />

            <TextView
                android:id="@+id/overview_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="@color/black_70"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/overview_title_tv"
                app:layout_constraintStart_toStartOf="parent"
                tools:text="Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum."
                />

            <TextView
                android:id="@+id/facts_title_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_marginTop="30dp"
                app:layout_constraintTop_toBottomOf="@+id/overview_tv"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/facts_title" />

            <androidx.cardview.widget.CardView
                android:id="@+id/budget_card"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:cardCornerRadius="12dp"
                app:cardElevation="0dp"
                app:cardBackgroundColor="@color/card_background"
                app:layout_constraintTop_toBottomOf="@+id/facts_title_tv"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/revenue_card"
                app:layout_constraintWidth_percent="0.48">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/budget_title"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/budget_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="$ 1,000,000"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/revenue_card"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginStart="12dp"
                app:cardCornerRadius="12dp"
                app:cardElevation="0dp"
                app:cardBackgroundColor="@color/card_background"
                app:layout_constraintTop_toBottomOf="@+id/facts_title_tv"
                app:layout_constraintStart_toEndOf="@id/budget_card"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintWidth_percent="0.48">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/revenue_title"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/revenue_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="$ 14,000,000"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/language_card"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                app:cardCornerRadius="12dp"
                app:cardElevation="0dp"
                app:cardBackgroundColor="@color/card_background"
                app:layout_constraintTop_toBottomOf="@+id/budget_card"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/rating_card"
                app:layout_constraintWidth_percent="0.48">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/original_language_title"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/language_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="English"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/rating_card"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginStart="12dp"
                app:cardCornerRadius="12dp"
                app:cardElevation="0dp"
                app:cardBackgroundColor="@color/card_background"
                app:layout_constraintTop_toBottomOf="@+id/revenue_card"
                app:layout_constraintStart_toEndOf="@id/language_card"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintWidth_percent="0.48">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/rating_title"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/rating_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="3.82 (1797)"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingHorizontal="20dp"
        android:paddingTop="25dp"
        android:paddingBottom="20dp"
        android:background="@color/top_bar_background"
        android:gravity="end">

        <CheckBox
            android:id="@+id/favorite_cb"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginEnd="30dp"
            android:button="@drawable/selector_checkbox" />

        <ImageButton
            android:id="@+id/close_btn"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_close"
            android:background="@null"
            />

    </LinearLayout>

    <androidx.core.widget.ContentLoadingProgressBar
        android:id="@+id/details_pb"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="16dp"
        android:layout_gravity="start"
        app:layout_constraintTop_toBottomOf="@+id/favorites_title"
        app:layout_constraintStart_toStartOf="parent"
        android:visibility="gone"
        />

</FrameLayout>